--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,49 @@
-<h1>Mountains!</h1>
+<center>
+  <h1><strong>Shred-Da-Mountain!</strong></h1>
+</center>
 
-<h2>Mountains on my bucket list!</h2>
-
-<ul>
-  {{#each mountains}}
-    {{#unless shred}}
-      {{> mountains/mountain-block shreded=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Shreded Mountains!</h2>
-
-<ul>
-  {{#each mountains}}
-    {{#if shred}}
-      {{> mountains/mountain-block shreded=false}}
-    {{/if}}
-  {{/each}}
-</ul>
-
-<h2>Add a mountain</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="ca">Mountain Name:</label>
-    <input type="text" id="ca" name="name">
+<div class=container>
+  <div class=row>
+    <div class=col-md-1></div>
+    <div class=col-md-5><strong>
+      <h2><strong>Bucket List Mountains!</strong></h2>
+        <ul>
+          {{#each mountains}}
+          {{#if shred}}
+          {{> mountains/mountain-block shreded=false}}
+          {{/if}}
+          {{/each}}
+        </ul>
+    </div>
+    <div class=col-md-6>
+      <h2><strong>Shreded Mountains!</strong></h2>
+        <ul>
+          {{#each mountains}}
+          {{#unless shred}}
+          {{> mountains/mountain-block shreded=true}}
+          {{/unless}}
+          {{/each}}
+        </ul></strong>
+    </div>
+    {{!-- <div class=col-md-1></div> --}}
   </div>
+</div>
 
-  <div class="form-group">
-    <label for="shred">Shred?</label><br>
-    <input type="radio" name="shred" value="1" checked> Shreded!<br>
-    <input type="radio" name="shred" value="0"> Bucket List!
-  </div>
+<center><strong>
+  <h2>Add a Mountain</h2>
+  <form class="create-form">
 
-  <button type="submit">Add Mountain to Shred!</button>
-</form>
+    <div class="form-group">
+      <label for="ca">Mountain Name:</label>
+      <input type="text" id="ca" name="name">
+    </div>
+
+    <div class="form-group">
+      <label for="shred">Bucket list or Shreded it?</label><br>
+      <input type="radio" name="shred" value="1" checked> Bucket List!<br>
+      <input type="radio" name="shred" value="0"> Shreded It!
+    </div>
+
+    <button class="btn btn-secondary btn-sm" type="submit">Add Mountain!</button>
+  </form></strong>
+</center>
