--- a/public/assets/css/mountain_style.css
+++ b/public/assets/css/mountain_style.css
@@ -1,7 +1,17 @@
+body {
+    background-image: url(../img/banff2.jpg);
+    background-repeat: none;
+    background-size: cover;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 20px;
+    line-height: 34px;
+    color: navy;
+  }
+
 li {
-    padding: 5px;
-    margin: 5px;
-    background: #faebd7;
+    padding: 1px;
+    margin: 1px;
+    background: none;
   }
   
   .label {
@@ -11,9 +21,10 @@ li {
   .create-update-form {
     padding: 5px;
     margin: 5px;
-    background: aqua;
   }
   
   .form-group {
     margin-bottom: 5px;
   }
+
+
