touching up css

--- a/views/partials/mountains/mountain-block.handlebars
+++ b/views/partials/mountains/mountain-block.handlebars
@@ -1,9 +1,9 @@
 <li>
 	{{mountain_name}}
 
-	<button class="change-shreded btn btn-secondary btn-sm" data-id="{{id}}" data-newshreded="{{shreded}}">
-		{{#if shreded}}Bucket List!{{else}}Shreded It!{{/if}}
+	<button class="change-shredded btn btn-secondary btn-sm" data-id="{{id}}" data-newshredded="{{shredded}}">
+		{{#if shredded}}Bucket List{{else}}Shredded It{{/if}}
 	</button>
 
-	<button class="delete-mountain btn btn-secondary btn-sm" data-id="{{this.id}}">Remove!</button>
+	<button class="delete-mountain btn btn-secondary btn-sm" data-id="{{this.id}}">Remove</button>
 </li>
