--- a/public/assets/css/mountain_style.css
+++ b/public/assets/css/mountain_style.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 20px;
     line-height: 34px;
-    color: navy;
+    color: rgb(121, 21, 121);
   }
 
 li {
