--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,21 +6,21 @@
   <div class=row>
     <div class=col-md-1></div>
     <div class=col-md-5><strong>
-      <h2><strong>Bucket List Mountains!</strong></h2>
+      <h2><strong>Bucket List Mountains</strong></h2>
         <ul>
           {{#each mountains}}
           {{#if shred}}
-          {{> mountains/mountain-block shreded=false}}
+          {{> mountains/mountain-block shredded=false}}
           {{/if}}
           {{/each}}
         </ul>
     </div>
     <div class=col-md-6>
-      <h2><strong>Shreded Mountains!</strong></h2>
+      <h2><strong>Shredded Mountains</strong></h2>
         <ul>
           {{#each mountains}}
           {{#unless shred}}
-          {{> mountains/mountain-block shreded=true}}
+          {{> mountains/mountain-block shredded=true}}
           {{/unless}}
           {{/each}}
         </ul></strong>
@@ -30,7 +30,7 @@
 </div>
 
 <center><strong>
-  <h2>Add a Mountain</h2>
+  <h2>Add-Da-Mountain</h2>
   <form class="create-form">
 
     <div class="form-group">
@@ -39,11 +39,11 @@
     </div>
 
     <div class="form-group">
-      <label for="shred">Bucket list or Shreded it?</label><br>
-      <input type="radio" name="shred" value="1" checked> Bucket List!<br>
-      <input type="radio" name="shred" value="0"> Shreded It!
+      {{!-- <label for="shred">Bucket list or Shredded it?</label><br> --}}
+      <input type="radio" name="shred" value="1" checked> Bucket List<br>
+      <input type="radio" name="shred" value="0"> Shredded It
     </div>
 
-    <button class="btn btn-secondary btn-sm" type="submit">Add Mountain!</button>
+    <button class="btn btn-secondary btn-sm" type="submit">Add Mountain</button>
   </form></strong>
 </center>
